[workspace]
members = [
    "heim",
    "heim-common",
    "heim-host",
    "heim-cpu",
    "heim-derive",
    "heim-memory",
    "heim-disk",
    "heim-net",
#    "heim-process",
#    "heim-virt",
#    "heim-winservice",
]

[patch.crates-io]
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "9e801418191191b1b18b2c33303792df1d880390" }
